更新有ＤＢ操控

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta name=title content=bojunshi><meta name=description content=bojunshi,SingularPoint,奇點影像工作室><meta name=keywords content=bojunshi,SingularPoint,奇點影像工作室><title>bojunshi</title><link href=static/css/style.css><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link type=text/css rel=stylesheet href=/static/bower_components/materialize/dist/css/materialize.css media=screen,projection><link type=text/css rel=stylesheet href=./static/font-aws/css/font-awesome.css><link rel=apple-touch-icon href=./static/img/phone1.png><link rel=apple-touch-icon sizes=72×72 href=./static/img/phone2.png><link rel=apple-touch-icon sizes=114×114 href=./static/img/phone3.png><link href=/static/css/app.73a6370d4abb9cf0fd0445779ec1ea8b.css rel=stylesheet></head><body><div id=app class=container></div><script src=https://www.gstatic.com/firebasejs/3.7.3/firebase.js></script><script>// Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyCTsdQ1o0B2i0lPZdjXMnilVDE7luPy6Ts",
-      authDomain: "bojunshi-5c494.firebaseapp.com",
-      databaseURL: "https://bojunshi-5c494.firebaseio.com",
-      storageBucket: "bojunshi-5c494.appspot.com",
-      messagingSenderId: "632003098695"
-    };
-    firebase.initializeApp(config);</script><script type=text/javascript src=/static/bower_components/jquery/dist/jquery.js></script><script type=text/javascript src=/static/bower_components/materialize/dist/js/materialize.js></script><script type=text/javascript src=/static/js/manifest.a68875524b6974a91504.js></script><script type=text/javascript src=/static/js/vendor.fa67b50f28eff8a26487.js></script><script type=text/javascript src=/static/js/app.fd6e264a56ee728b6c84.js></script></body></html>
+  var config = {
+    apiKey: "AIzaSyDmlWIzVFIOULlrSg-F3-WFgCxywnTanVw",
+    authDomain: "bojunsih.firebaseapp.com",
+    databaseURL: "https://bojunsih.firebaseio.com",
+    storageBucket: "bojunsih.appspot.com",
+    messagingSenderId: "368888880011"
+  };
+  firebase.initializeApp(config);
+    // const dbRef = firebase.database().ref().child('PId')
+    // console.log(dbRef)
+    // dbRef.on('value', snap => console.log(snap.val()))</script><script type=text/javascript src=/static/bower_components/jquery/dist/jquery.js></script><script type=text/javascript src=/static/bower_components/materialize/dist/js/materialize.js></script><script type=text/javascript src=/static/js/manifest.436b6a938991cb608c68.js></script><script type=text/javascript src=/static/js/vendor.d27026369b8c311f46ba.js></script><script type=text/javascript src=/static/js/app.844215b1e355b5495d52.js></script></body></html>
