--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta name=title content=奇點影像工作室><meta name=description content=bojunshi,SingularPoint,奇點影像工作室><meta name=keywords content=bojunshi,SingularPoint,奇點影像工作室><meta property=og:title content=奇點影像工作室><meta property=og:type content=website><meta property=og:site_name content=奇點影像工作室><meta property=og:url content=https://bojunshi.github.io/#/ ><title>奇點影像工作室</title><link href=static/css/style.css><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link type=text/css rel=stylesheet href=/static/bower_components/materialize/dist/css/materialize.css media=screen,projection><link rel=icon href=static/img/phone1.png type=image/x-icon><link type=text/css rel=stylesheet href=./static/font-aws/css/font-awesome.css><link rel=apple-touch-icon href=./static/img/phone1.png><link rel=apple-touch-icon sizes=72×72 href=./static/img/phone2.png><link rel=apple-touch-icon sizes=114×114 href=./static/img/phone3.png><link href=/static/css/app.73a6370d4abb9cf0fd0445779ec1ea8b.css rel=stylesheet></head><body><div id=app class=container></div><script src=https://www.gstatic.com/firebasejs/3.7.3/firebase.js></script><script>// Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDmlWIzVFIOULlrSg-F3-WFgCxywnTanVw",
-    authDomain: "bojunsih.firebaseapp.com",
-    databaseURL: "https://bojunsih.firebaseio.com",
-    storageBucket: "bojunsih.appspot.com",
-    messagingSenderId: "368888880011"
-  };
-  firebase.initializeApp(config);
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta name=title content=奇點影像工作室><meta name=description content=bojunshi,SingularPoint,奇點影像工作室><meta name=keywords content=bojunshi,SingularPoint,奇點影像工作室><meta property=og:title content=奇點影像工作室><meta property=og:type content=website><meta property=og:site_name content=奇點影像工作室><meta property=og:url content=https://bojunshi.github.io/#/ ><meta name=apple-mobile-web-app-capable content=yes><meta name=mobile-web-app-capable content=yes><title>奇點影像工作室</title><link rel=manifest href=/static/manifest.json><link href=static/css/style.css><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link type=text/css rel=stylesheet href=/static/bower_components/materialize/dist/css/materialize.css media=screen,projection><link rel=icon href=static/img/phone1.png type=image/x-icon><link type=text/css rel=stylesheet href=./static/font-aws/css/font-awesome.css><link rel=apple-touch-icon href=./static/img/phone1.png><link rel=apple-touch-icon sizes=72×72 href=./static/img/phone2.png><link rel=apple-touch-icon sizes=114×114 href=./static/img/phone3.png><link href=/static/css/app.73a6370d4abb9cf0fd0445779ec1ea8b.css rel=stylesheet></head><body><div id=app class=container></div><script src=https://www.gstatic.com/firebasejs/3.7.3/firebase.js></script><script>// Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDmlWIzVFIOULlrSg-F3-WFgCxywnTanVw",
+      authDomain: "bojunsih.firebaseapp.com",
+      databaseURL: "https://bojunsih.firebaseio.com",
+      storageBucket: "bojunsih.appspot.com",
+      messagingSenderId: "368888880011"
+    };
+    firebase.initializeApp(config);
     // const dbRef = firebase.database().ref().child('PId')
     // console.log(dbRef)
-    // dbRef.on('value', snap => console.log(snap.val()))</script><script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer=defer><script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.js"></script><script type=text/javascript src=/static/bower_components/materialize/dist/js/materialize.js></script><script type=text/javascript src=/static/js/manifest.a8f1dde39ce755a5111c.js></script><script type=text/javascript src=/static/js/vendor.e8a24137fc02c1f5405d.js></script><script type=text/javascript src=/static/js/app.28876ddd3dcb32bcad8b.js></script></body></html>
+    // dbRef.on('value', snap => console.log(snap.val()))
+    if (navigator.serviceWorker) {
+      navigator.serviceWorker.register('./service-worker.js').then(function (registration) {
+        console.log('ServiceWorker registration successful with scope:', registration.scope);
+      }).catch(function (error) {
+        console.log('ServiceWorker registration failed:', error);
+      });
+    }</script><script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer=defer>< script type = "text/javascript"
+    src = "/static/bower_components/jquery/dist/jquery.js" ></script><script type=text/javascript src=/static/bower_components/materialize/dist/js/materialize.js></script><script type=text/javascript src=/static/js/manifest.a8f1dde39ce755a5111c.js></script><script type=text/javascript src=/static/js/vendor.e8a24137fc02c1f5405d.js></script><script type=text/javascript src=/static/js/app.28876ddd3dcb32bcad8b.js></script></body></html>
